2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Post release bump to 0.7.1.

======== Release 0.7.0 ========================================================

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* README:
	* NEWS:
	* configure.ac: Release 0.7.0, "Booska".

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-cogl-offscreen.c:
	* tests/test-cogl-primitives.c:
	* tests/test-cogl-tex-convert.c:
	* tests/test-cogl-tex-foreign.c:
	* tests/test-cogl-tex-getset.c:
	* tests/test-cogl-tex-tile.c:
	* tests/test-layout.c:
	* tests/test-pixmap.c:
	* tests/test-texture-quality.c: Miscellaneous fixes for distcheck
	to pass.

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* tests/test-cogl-primitives.c:
	* tests/test-events.c:
	* tests/test-multistage.c:
	* tests/test-textures.c:
	* tests/test-timeline.c: Miscellaneous fixes for distcheck to
	pass.

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-texture.c:
	(clutter_texture_unrealize), (clutter_texture_dispose): Add a
	guard against reading back memory during the unrealization on
	dispose.

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #953 - Actors are not hidden before unrealized or
	           disposed (Tommi Komulainen)

	* clutter/clutter-actor.c:
	(clutter_actor_unrealize): Hide a visible actor when unrealizing
	it.

	(clutter_actor_dispose): Make sure to unrealize an actor when
	disposing it.

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c:
	(clutter_actor_dispose), (clutter_actor_destroy),
	(clutter_actor_unparent): Clean up the actor's destruction
	sequence, making sure that every operation is performed
	under the CLUTTER_ACTOR_IN_DESTRUCTION internal flag. (thanks
	to Tomas Frydrych, Neil Roberts and Matthew Allum)

2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>
