@@ -26,6 +26,8 @@
 #ifndef __COGL_DEFINES_H__
 #define __COGL_DEFINES_H__
 
+#define GL_GLEXT_PROTOTYPES 1
+
 #include <@CLUTTER_GL_HEADER@>
 
 G_BEGIN_DECLS
