@@ -1,3 +1,9 @@
+2008-06-14  Matthew Allum  <mallum@openedhand.com>
+
+	* README:
+        Make needed GL version 1.4, note GLES2 support, add some notes
+        for COGL. 
+
 2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>
 
 	* configure.ac: Post release bump to 0.7.1.
